--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -214,7 +214,7 @@ For each experiment we measure independently $\lambda$ and all the parameter tha
 The beauty of this approach is that it is not only valid to model the primary wavelength, but that it describes also the growth of the secondary pattern. Although the wavelength $\lambda_2$ of the secondary pattern is fully determined by the primary pattern $\lambda_2 = \lambda_1/2$, Figure~\ref{fig:dynamics} and Supplementary Figure~\ref{fig:generations}, the secondary pattern has its own dynamics with its own characteristic time $\tau_2\neq\tau_1$. Since the saturation of the primary pattern flattens the gel on the top and bottom walls, the secondary blisters always appear in a Darcy situation ($H\ll H^*$). Therefore, we are able to obtain more data at small $H/H^*$ ratios by considering not only the primary patterns but also the secondary ones.
 
 
-Despite changing the gel properties and the cell geometry we always observe wrinkling proving the robustness of this approach to form wrinkling patterns. We are in the position to vary $H/H^\star$ from 0.1 to 10 so that we can test the crossover between Darcy and Poiseuille mechanism. In Figure~\ref{fig:DarcyPoiseuille}a and b we have plotted the measure wavelength as a function of the model prediction $\lambda_D$ and $\lambda_P$ respectively. If the prediction are correct we expect $\lambda_\text{exp}=\lambda_D$ when $H<H^*$ and $\lambda_\text{exp}=\lambda_P$ when $H>H^*$. Indeed, both model seems to apply in their domain of validity albeit with a prefactor. The failure of the Poiseuille model is only visible at small wavelengths where an unexplained offset (dashed line in Figure~\ref{fig:DarcyPoiseuille}b) is necessary to fit the data. To go further, we derive a complete model summing up the influence of both Poiseuille and Darcy dissipation, see Supplementary Methods. The results of this new model are displayed in Figure~\ref{fig:DarcyPoiseuille}c and agree with $\lambda_\text{exp}$ for the whole $H/H^*$ range.
+Despite changing the gel properties and the cell geometry we always observe wrinkling proving the robustness of this approach to form wrinkling patterns. We are in the position to vary $H/H^\star$ from 0.1 to 10 so that we can test the crossover between Darcy and Poiseuille mechanism. In Figure~\ref{fig:DarcyPoiseuille}a and b we have plotted the measure wavelength as a function of the model prediction $\lambda_D$ and $\lambda_P$ respectively. If the predictions are correct we expect $\lambda_\text{exp}=\lambda_D$ when $H<H^*$ and $\lambda_\text{exp}=\lambda_P$ when $H>H^*$. Indeed, both model seems to apply in their domain of validity albeit with a prefactor. The failure of the Poiseuille model is only visible at small wavelengths where an unexplained offset (dashed line in Figure~\ref{fig:DarcyPoiseuille}b) is necessary to fit the data. To go further, we derive a complete model summing up the influence of both Poiseuille and Darcy dissipation, see Supplementary Methods. The results of this mixed model are displayed in Figure~\ref{fig:DarcyPoiseuille}c and agree with $\lambda_\text{exp}$ for the whole $H/H^*$ range.
 
 \section*{Conclusion}
 
@@ -336,7 +336,7 @@ From these data, we obtain for each stack the volume and thickness of the gel ph
 \section*{Characteristic time measurements}
 \begin{figure}
 	\includegraphics{growth}
-	\caption{Growth of the instability. (a) Evolution of the gel velocity $v$ averaged over the whole surface. Inset: Evolution of the peak-to-peak amplitude $A(t)$ in semi logarithmic scales. The black line is the best exponential fit with $\tau=\SI{90}{\second}$. (b) Evolution of the bottom profile of the gel from onset of instability (yellow) to contact to both walls (brown). Note that the longitudinal size of the blister evolves in this regime. The thick black curve is the profile at much longer times and is at lower altitude due to swelling. Note that the blister foot, highlighted by the orange vertical line, has not moved since contact.}
+	\caption{Growth of the instability. (a) Evolution of the peak-to-peak amplitude $A(t)$ in semi logarithmic scales. The black line is the best exponential fit with $\tau=\SI{90}{\second}$. (b) Evolution of the bottom profile of the gel from onset of instability (yellow) to contact to both walls (brown). The longitudinal size of the blister evolves in this regime. The thick black curve is the profile at much longer times and is at lower altitude due to swelling. The blister foot, highlighted by the orange vertical line, does not move after contact.}
 	\label{fig:growth}
 \end{figure}
 
