--- a/fig_plis/Yaourt.bib
+++ b/fig_plis/Yaourt.bib
@@ -2428,3 +2428,21 @@
   Url                      = {http://www.ncbi.nlm.nih.gov/pubmed/19853068}
 }
 
+@Article{Yoo2003,
+  Title                    = {{Evolution of a stress-driven pattern in thin bilayer films: spinodal wrinkling.}},
+  Author                   = {Yoo, Pil J and Lee, Hong H},
+  Journal                  = {Phys. Rev. Lett.},
+  Year                     = {2003},
+  Number                   = {15},
+  Pages                    = {154502},
+  Volume                   = {91},
+
+  Abstract                 = {We report the full spectrum of the evolution of the wrinkle pattern formation in a thin bilayer film of an elastic metal on a viscoelastic polymer. Although the origin is different, the transition of an initial islandlike pattern to a labyrinthine structure without any change in the wavelength (q approximately t(0)) and the overall evolutionary process is strikingly similar to that in the spinodal system but the process is robust and takes place on a long time scale (about 10 days). The change into a mountainous topography in the late stages is accompanied by an increase in the length scale from an initial wavelength to another. This change, due to the relaxation of the confined polymer that results in a transition from elastic- to viscouslike behavior, induces wave coarsening (q approximately t(-1.04+/-0.08)) and macroscopic roughening.},
+  Doi                      = {10.1103/PhysRevLett.91.154502},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/2003/Physical review letters/Yoo, Lee - 2003 - Evolution of a stress-driven pattern in thin bilayer films spinodal wrinkling.pdf:pdf},
+  ISSN                     = {0031-9007},
+  Owner                    = {mathieu},
+  Pmid                     = {14611470},
+  Timestamp                = {2015.04.27}
+}
+
